# api/controllers/ideaController.ts
@@ -6,6 +6,7 @@ export = {
   addIdea: IdeaController.addIdea,
   getIdea: IdeaController.getIdea,
   getIdeas: IdeaController.getIdeas,
+  getLinkToIdea: IdeaController.getLinkToIdea,
   likeIdea: IdeaController.likeIdea
 };
 
@@ -15,7 +16,7 @@ export = {
 module IdeaController {
 
   /**
-   *
+   * Add a new idea to the database and return the link to that idea.
    *
    * @param req
    * @param res
@@ -25,17 +26,35 @@ module IdeaController {
   }
 
   /**
+   * Create link to idea with given idea and return in to the client.
    *
+   * @param req
+   * @param res
+   */
+  export function getLinkToIdea(req, res) {
+
+    var pathArray = req.path.split('/');
+    var ideaId = parseInt(pathArray[pathArray.length - 2]);
+
+    // TODO xreate link
+  }
+
+  /**
+   * Get idea with given id.
    *
    * @param req
    * @param res
    */
   export function getIdea(req, res) {
 
+    var pathArray = req.path.split('/');
+    var ideaId = parseInt(pathArray[pathArray.length - 1]);
+
+    // TODO retrieve idea from database
   }
 
   /**
-   *
+   * Get a list of all ideas. Could include a query parameter.
    *
    * @param req
    * @param res
@@ -45,12 +64,16 @@ module IdeaController {
   }
 
   /**
-   *
+   * Give the idea with the given idea a like.
    *
    * @param req
    * @param res
    */
   export function likeIdea(req, res) {
 
+    var pathArray = req.path.split('/');
+    var ideaId = parseInt(pathArray[pathArray.length - 2]);
+
+    // TODO update like counter of idea
   }
 }
